Added refined clustering and start of structure prediction processes. Moved docker files to seperate folders

--- a/nextflow.config
+++ b/nextflow.config
@@ -2,7 +2,7 @@
 
 params.genomes = "./phages/*/*.fasta"
 params.features = "./phages/*/*.gff"
-params.reps = "./protein_clusters_v2.1/seq_clusters_rep_seq.fasta"
+params.reps = null
 params.outDir = "results"
 
 docker {
@@ -15,9 +15,19 @@ process {
     withName: mmseqscluster {
         container = "soedinglab/mmseqs2"
     }
+    withName: mmseqscluster_refine {
+        container = "soedinglab/mmseqs2"
+    }
     withName: createDB {
         container = "soedinglab/mmseqs2"
     }
+    withName: colabofold_search {
+        container = "colabfold"
+    }
+    withName: colabofold_batch {
+        container = "colabfold"
+    }
 
-    container = "phage_image"
+    // use this container for the rest
+    container = "phagomics"
 }
