--- a/nextflow.config
+++ b/nextflow.config
@@ -4,6 +4,8 @@ params.genomes = "./phages/*/*.fasta"
 params.features = "./phages/*/*.gff"
 params.reps = null
 params.outDir = "results"
+params.wsl = false
+params.db = "." // "/db/AFSP" for current foldseek setup
 
 docker {
     enabled = true
@@ -21,11 +23,17 @@ process {
     withName: createDB {
         container = "soedinglab/mmseqs2"
     }
-    withName: colabofold_search {
+    withName: colabfold_search {
         container = "colabfold"
     }
-    withName: colabofold_batch {
+    withName: colabfold_batch {
         container = "colabfold"
+    }
+    withName: colabfold_batch_wsl {
+        container = "colabfold"
+    }
+    withName: foldseek {
+        container = "foldseek"
     }
 
     // use this container for the rest
