Added support for local databases for foldseek

--- a/nextflow.config
+++ b/nextflow.config
@@ -5,7 +5,7 @@ params.features = "./phages/*/*.gff"
 params.reps = null
 params.outDir = "results"
 params.wsl = false
-params.db = "." // "/db/AFSP" for current foldseek setup
+params.db = "./BFVD" // "/db/AFSP" for current foldseek setup
 
 docker {
     enabled = true
