Validation and other stuff i think

--- a/nextflow.config
+++ b/nextflow.config
@@ -5,7 +5,8 @@ params.features = "./phages/*/*.gff"
 params.reps = null
 params.outDir = "results"
 params.wsl = false
-params.db = "./BFVD" // "/db/AFSP" for current foldseek setup
+params.db = "./BFVD"
+params.validDB = "./BaselDB/db"
 
 docker {
     enabled = true
@@ -33,6 +34,9 @@ process {
         container = "colabfold"
     }
     withName: foldseek {
+        container = "foldseek"
+    }
+    withName: foldseekValidate {
         container = "foldseek"
     }
 
