--- a/nextflow.config
+++ b/nextflow.config
@@ -5,7 +5,7 @@ params.features = "./phages/*/*.gff"
 params.reps = null
 params.outDir = "results"
 params.wsl = false
-params.db = "./BFVD"
+params.db = "./AFprot"
 params.validDB = "./BaselDB/db"
 
 docker {
