--- a/nextflow.config
+++ b/nextflow.config
@@ -2,11 +2,13 @@
 
 params.genomes = "./phages/*/*.fasta"
 params.features = "./phages/*/*.gff"
-params.reps = null
 params.outDir = "results"
 params.wsl = false
-params.db = "./AFprot"
-params.validDB = "./BaselDB/db"
+
+params.colabdb = "."    // path/to/db
+params.foldseekdb = "." // "path/to/db/name_of_db" 
+params.validdb = "."    // "path/to/db/name_of_db" 
+
 
 docker {
     enabled = true
@@ -23,9 +25,6 @@ process {
     }
     withName: createDB {
         container = "soedinglab/mmseqs2"
-    }
-    withName: colabfold_search {
-        container = "colabfold"
     }
     withName: colabfold_batch {
         container = "colabfold"
