--- a/nextflow.config
+++ b/nextflow.config
@@ -18,26 +18,26 @@ process {
     // local for now, push to dockerhub for remote
 
     withName: mmseqscluster {
-        container = "soedinglab/mmseqs2"
+        container = "colabfold"
     }
     withName: mmseqscluster_refine {
-        container = "soedinglab/mmseqs2"
+        container = "colabfold"
     }
-    withName: createDB {
-        container = "soedinglab/mmseqs2"
-    }
+    // withName: createDB {
+    //     container = "colabfold"
+    // }
     withName: colabfold_batch {
         container = "colabfold"
     }
     withName: colabfold_batch_wsl {
         container = "colabfold"
     }
-    withName: foldseek {
-        container = "foldseek"
-    }
-    withName: foldseekValidate {
-        container = "foldseek"
-    }
+    // withName: foldseek {
+    //     container = "foldseek"
+    // }
+    // withName: foldseekValidate {
+    //     container = "foldseek"
+    // }
 
     // use this container for the rest
     container = "phagomics"
