Refactoring into subprocesses and cleanup

--- a/nextflow.config
+++ b/nextflow.config
@@ -21,7 +21,7 @@ process {
     withName: mmseqscluster {
         container = "colabfold"
     }
-    withName: mmseqscluster_refine {
+    withName: mmseqsclusterRefine {
         container = "colabfold"
     }
     // withName: createDB {
