--- a/nextflow.config
+++ b/nextflow.config
@@ -5,15 +5,18 @@ params.features = "./phage_data/*/*.gff"
 params.proteins = "./phage_data/*/*.faa"
 params.outDir = "results"
 params.wsl = false
+params.maxProteinLength = 1500
 
 params.colabdb = "."    // path/to/db
 params.foldseekdb = "." // "path/to/db/name_of_db" 
 params.validdb = "."    // "path/to/db/name_of_db" 
 
+cleanup = true
 
 docker {
     enabled = true
-    containerOptions = "--rm"
+    runOptions = "--rm"
+    fixOwnership = true
 }
 
 process {
