--- a/nextflow.config
+++ b/nextflow.config
@@ -7,7 +7,7 @@ params.outDir = "results"
 params.wsl = false
 params.maxProteinLength = 1500
 
-params.colabdb = "."    // path/to/db
+params.colabdb = "."    // "path/to/db/name_of_db" 
 params.foldseekdb = "." // "path/to/db/name_of_db" 
 params.validdb = "."    // "path/to/db/name_of_db" 
 
