--- a/nextflow.config
+++ b/nextflow.config
@@ -11,7 +11,7 @@ params.colabdb = "."    // "path/to/db/name_of_db"
 params.foldseekdb = "." // "path/to/db/name_of_db" 
 params.validdb = "."    // "path/to/db/name_of_db" 
 
-cleanup = true
+cleanup = false
 
 docker {
     enabled = true
