--- a/nextflow.config
+++ b/nextflow.config
@@ -11,7 +11,9 @@ params.colabdb = "."    // "path/to/db/name_of_db"
 params.foldseekdb = "." // "path/to/db/name_of_db" 
 params.validdb = "."    // "path/to/db/name_of_db" 
 
-cleanup = false
+workDir = "work1"
+
+cleanup = true
 
 docker {
     enabled = true
