Working gff implementation

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,6 +1,6 @@
 #!/usr/bin/env nextflow
 
-params.genomes = "./phage_data/*/*.fasta"
+params.genomes = "./phage_data/*/*.fna"
 params.features = "./phage_data/*/*.gff"
 params.proteins = "./phage_data/*/*.faa"
 params.outDir = "results"
@@ -13,7 +13,7 @@ params.validdb = "."    // "path/to/db/name_of_db"
 
 workDir = "work1"
 
-cleanup = true
+cleanup = false
 
 docker {
     enabled = true
