--- a/nextflow.config
+++ b/nextflow.config
@@ -13,7 +13,7 @@ params.validdb = "."    // "path/to/db/name_of_db"
 
 workDir = "work1"
 
-cleanup = false
+cleanup = true
 
 docker {
     enabled = true
